# name: test_find[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'id': 'test',
      'name': 'testers',
    },
    <class 'dict'> {
      'id': 'limited',
      'name': 'limited',
    },
  ]
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'id': 'foo',
    'name': 'foo',
    'permissions': <class 'dict'> {
      'cancel_job': True,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': True,
      'modify_subtraction': True,
      'remove_file': True,
      'remove_job': True,
      'upload_file': True,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'leeashley',
        'id': '7CtBo2yG',
      },
    ],
  }
---
# name: test_remove[uvloop-404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'permissions': <class 'list'> [
      ],
    },
  ]
---
# name: test_remove[uvloop-None][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'permissions': <class 'list'> [
      ],
    },
  ]
---
# name: test_update_permissions[uvloop-404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'list'> [
      ],
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'list'> [
      ],
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
# name: test_update_permissions[uvloop-None][db]
  <class 'dict'> {
    '_id': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_update_permissions[uvloop-None][json]
  <class 'dict'> {
    'id': 'test',
    'name': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'leeashley',
        'id': '7CtBo2yG',
      },
    ],
  }
---
# name: test_update_permissions[uvloop-None][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'list'> [
      ],
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
